--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import "../src/assets/style/soho-dark/theme.css";
+@import "../node_modules/primeng/resources/primeng.min.css";
+@import "assets/style/_app";
+@import "primeicons/primeicons.css";
+@import "assets/vendors/bootstrap/css/bootstrap.min.css";
