--- a/src/app/pages/modulos/home/home.component.html
+++ b/src/app/pages/modulos/home/home.component.html
@@ -23,7 +23,7 @@
                     <!-- <div class="insights"></div> -->
                     <p-panel>
                         <p>
-                            Lucas Machado da Silva
+                            Pedro Machado da Silva
                         </p>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
