--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,8 @@
 @import "assets/style/_app";
 @import "primeicons/primeicons.css";
 @import "assets/vendors/bootstrap/css/bootstrap.min.css";
+
+
+body {
+    background-color: #0C0C0C;
+}
