--- a/src/app/pages/modulos/home/home.component.html
+++ b/src/app/pages/modulos/home/home.component.html
@@ -3,10 +3,11 @@
     <div class="container">
         <div class="col-12">
             <div class="row">
-                <div class="col-12 col-md-10 mch-color-white  text-hi">
-                    <label>{{simbol + " Hi, i’m Lucas Machado, a Front-end developer."}}</label>
+                <div class="col-12 col-md-8 mch-color-white text-hi">
+                    <label><span [style]="simbolStyle">{{ simbol }}</span> Hi, I’m Lucas Machado -  Front-end developer.</label>
                     <p class="mch-fs-15 mch-color-grey2">Dando vida à web com código e design.</p>
                 </div>
+
             </div>
             <div class="row">
 
@@ -16,7 +17,7 @@
                 <div class="mt-4 mt-md-0 col-md-0 col-md-2 col-12">
                     <p-button label="Projetos" styleClass="p-button-outlined"></p-button>
                 </div>
-            </div> 
+            </div>
 
             <div class="mt-4 row">
                 <div class="mt-4 col-12 col-md-8">
@@ -32,30 +33,8 @@
                         </p>
                     </p-panel>
                 </div>
-
-                <div class="mt-4 col-12">
-                    <div class="insights" style="position: relative;">
-                        <div class="row">
-                            <div class="col-12">
-                                <label class="titleInsights mch-fs-30">Vamos iniciar algo juntos?</label>
-                                <p class="subTitleInsights mch-fs-">Se você tem algum projeto em mente, ou apenas quer
-                                    bater um papo, sinta-se à vontade para me enviar uma mensagem.</p>
-                            </div>
-                            <div class="m-0 m-md-3 col-12 col-md-2">
-                                <p-button label="Minhas Redes" styleClass="p-button-outlined"></p-button>
-                            </div>
-
-                        </div>
-                        <div class="row justify-content-center">
-                            <div (click)="redes()" class="mt-5 mt-md-0 icon-large col-2 col-md-1 pi pi-github"></div>
-                            <div (click)="redes()" class="mt-5 mt-md-0 icon-large col-2 col-md-1 pi pi-instagram"></div>
-                            <div (click)="redes()" class="mt-5 mt-md-0 icon-large col-2 col-md-1 pi pi-linkedin"></div>
-                            <div (click)="redes()" class="mt-5 mt-md-0 icon-large col-2 col-md-1 pi pi-github"></div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
+        <app-footer></app-footer>
     </div>
 </div>
