--- a/src/assets/style/pages/_home.scss
+++ b/src/assets/style/pages/_home.scss
@@ -4,8 +4,7 @@
     // margin-top: 60px;
     // margin-left: 63px;
     font-family: "Montserrat", sans-serif;
-
-    font-size: 70px
+    font-size: 50px
 }
 
 @media (max-width: 768px) {
@@ -28,8 +27,19 @@
     background-color: #232323;
     border-radius: 31px;
     max-width: 100%;
-    height: 300PX;
+    height: 250PX;
+    top: 50px
+;
 }
+
+@media (max-width: 768px) {
+
+    .insights {
+        height: 380px;
+        top: 20px
+    }
+}
+
 
 .container {
     color: white;
@@ -61,4 +71,8 @@
     font-size: 48px;
     /* Tamanho desejado */
     top: -20px;
+}
+
+.iconSocial {
+    font-size: 30px;
 }
