--- a/src/app/pages/modulos/home/home.component.html
+++ b/src/app/pages/modulos/home/home.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="container-found">
-    <div class="container">
+    <div class="containerCsite">
         <div class="col-12">
             <div class="row">
                 <div class="col-12 col-md-8 mch-color-white text-hi">
@@ -35,6 +35,10 @@
                 </div>
             </div>
         </div>
+<div class="row">
+    <div class="col-12">
         <app-footer></app-footer>
+    </div>
+</div>
     </div>
 </div>
