--- a/src/assets/style/components/header.scss
+++ b/src/assets/style/components/header.scss
@@ -10,6 +10,23 @@
     height: auto;
 }
 
+/* CSS personalizado para o seu cabeçalho */
+.navbar-custom {
+    background-color: #0c0c0c;
+}
+
+/* Defina a cor do texto do cabeçalho, se necessário */
+.navbar-custom .navbar-brand,
+.navbar-custom .navbar-nav .nav-link {
+    color: #FFFFFF; /* Cor do texto (branco neste exemplo) */
+}
+
+/* Altere a cor do ícone do botão de alternância, se desejar */
+.navbar-custom .navbar-toggler-icon {
+    background-color: #FFFFFF; /* Cor de fundo do ícone do botão de alternância (branco neste exemplo) */
+}
+
+
 .opt-navbar {
     font-family: "Aldrich", sans-serif;
     margin-top: 30px;
@@ -27,6 +44,19 @@
     height: 100%;
     padding: 0 5px;
     cursor: pointer;
+}
+
+/* Personalize o botão de expansão */
+.navbar-toggler {
+    background-color: transparent; /* Cor de fundo do botão */
+    border: none; /* Remova a borda do botão */
+    outline: none; /* Remova a borda de foco */
+    cursor: pointer;
+}
+
+/* Personalize o ícone do botão de expansão */
+.navbar-toggler-icon {
+    background-color: #fff; /* Cor de fundo do ícone */
 }
 
 @media (max-width: 767px) {
@@ -84,7 +114,8 @@
 
 .file-img {
     position: unset;
-    max-width: 45%;
+    max-width: 100%;
     max-height: 100%;
+    width: 100px;
 }
 
