--- a/src/assets/style/pages/_home.scss
+++ b/src/assets/style/pages/_home.scss
@@ -28,8 +28,7 @@
     border-radius: 31px;
     max-width: 100%;
     height: 250PX;
-    top: 50px
-;
+    top: 50px;
 }
 
 @media (max-width: 768px) {
@@ -41,10 +40,10 @@
 }
 
 
-.container {
+.containerCsite {
     color: white;
-    max-width: 1200px;
-    margin: 100px auto;
+    max-width: 1000px;
+    margin:10px auto;
     padding: 20px;
     border-radius: 5px;
     // background-color: #8f8f8f;
