--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,22 +1,25 @@
-<div class="mt-4 col-12">
-    <div class="insights" style="position: relative;">
-        <div class="row">
-            <div class="col-12">
-                <label class="titleInsights mch-fs-30">Vamos iniciar algo juntos?</label>
-                <p class="subTitleInsights mch-fs-">Se você tem algum projeto em mente, ou apenas quer
-                    bater um papo, sinta-se à vontade para me enviar uma mensagem.</p>
-            </div>
-            <div
-                class="m-0 m-md-3 col-12 col-md-3 d-flex d-md-block justify-content-center justify-content-md-initial">
-                <p-button label="Minhas Redes" styleClass="p-button-outlined"></p-button>
-            </div>
+<div class="row">
 
-        </div>
-        <div class="row justify-content-center">
-            <div (click)="redes()" class="mt-5 mt-md-0 iconSocial col-2 col-md-1 pi pi-github"></div>
-            <div (click)="redes()" class="mt-5 mt-md-0 iconSocial col-2 col-md-1 pi pi-instagram"></div>
-            <div (click)="redes()" class="mt-5 mt-md-0 iconSocial col-2 col-md-1 pi pi-linkedin"></div>
-            <div (click)="redes()" class="mt-5 mt-md-0 iconSocial col-2 col-md-1 pi pi-github"></div>
+    <div class="mt-4 col-12">
+        <div class="insights" style="position: initial;">
+            <div class="row">
+                <div class="col-12">
+                    <label class="titleInsights mch-fs-30">Vamos iniciar algo juntos?</label>
+                    <p class="subTitleInsights mch-fs-">Se você tem algum projeto em mente, ou apenas quer
+                        bater um papo, sinta-se à vontade para me enviar uma mensagem.</p>
+                </div>
+                <div
+                    class="m-0 m-md-3 col-12 col-md-3 d-flex d-md-block justify-content-center justify-content-md-initial">
+                    <p-button label="Minhas Redes" styleClass="p-button-outlined"></p-button>
+                </div>
+    
+            </div>
+            <div class="row justify-content-center">
+                <div (click)="redes()" class="mt-5 mt-md-0 iconSocial col-2 col-md-1 pi pi-github"></div>
+                <div (click)="redes()" class="mt-5 mt-md-0 iconSocial col-2 col-md-1 pi pi-instagram"></div>
+                <div (click)="redes()" class="mt-5 mt-md-0 iconSocial col-2 col-md-1 pi pi-linkedin"></div>
+                <div (click)="redes()" class="mt-5 mt-md-0 iconSocial col-2 col-md-1 pi pi-github"></div>
+            </div>
         </div>
     </div>
 </div>
