--- a/src/app/pages/modulos/home/home.component.html
+++ b/src/app/pages/modulos/home/home.component.html
@@ -4,7 +4,8 @@
         <div class="col-12">
             <div class="row">
                 <div class="col-12 col-md-8 mch-color-white text-hi">
-                    <label><span [style]="simbolStyle">{{ simbol }}</span> Hi, I’m Lucas Machado -  Front-end developer.</label>
+                    <label><span [style]="simbolStyle">{{ simbol }}</span> Hi, I’m Lucas Machado - Front-end
+                        developer.</label>
                     <p class="mch-fs-15 mch-color-grey2">Dando vida à web com código e design.</p>
                 </div>
 
@@ -21,7 +22,6 @@
 
             <div class="mt-4 row">
                 <div class="mt-4 col-12 col-md-8">
-                    <!-- <div class="insights"></div> -->
                     <p-panel>
                         <p>
                             Pedro Machado da Silva
@@ -35,10 +35,8 @@
                 </div>
             </div>
         </div>
-<div class="row">
-    <div class="col-12">
+
         <app-footer></app-footer>
-    </div>
-</div>
+
     </div>
 </div>
