--- a/src/assets/style/pages/_home.scss
+++ b/src/assets/style/pages/_home.scss
@@ -27,9 +27,16 @@
     background-color: #232323;
     border-radius: 31px;
     max-width: 100%;
-    height: 250PX;
+    height: 250px;
     top: 50px;
 }
+// Escolha a abordagem que melhor atenda às necessidades de design e conteúdo do seu site. Se você optar por remover a altura fixa ou adicionar rolagem, certifique-se de testar o layout em diferentes tamanhos de tela para garantir que ele funcione corretamente em todos os dispositivos.
+
+
+
+
+
+
 
 @media (max-width: 768px) {
 
@@ -43,7 +50,7 @@
 .containerCsite {
     color: white;
     max-width: 1000px;
-    margin:10px auto;
+    margin: 10px auto;
     padding: 20px;
     border-radius: 5px;
     // background-color: #8f8f8f;
