--- a/docs/assets/style/template/_container.scss
+++ b/docs/assets/style/template/_container.scss
@@ -3,10 +3,11 @@
     justify-content: space-between;
     background-color: #0C0C0C;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100vh; /* O contêiner ocupará pelo menos 100% da altura da janela do navegador */
     transition: margin-left 0.2s;
     padding-top: 10px;
 }
+
 
 @media screen and (max-width: 768px) {
     .container-found {
