--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,12 +6,15 @@
                     class="file-img sidebar-menu-logo" />
             </a>
         </div>
-
+        <div class="m-2 row">
+            <div class="col-12">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" (click)="toggleNavbar()">
+                    <span class="pi pi-bars" style="font-size: 20px;"></span>
+                </button>
+            </div>
+        </div>
         <!-- Botão do menu para dispositivos móveis -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="pi pi-bars"></span>
-        </button>
+
         <div class="col-12 col-md-6 d-flex justify-content-center justify-content-md-end text-md-end text-center">
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav options d-flex flex-column flex-md-row align-items-center">
