--- a/src/assets/style/pages/_home.scss
+++ b/src/assets/style/pages/_home.scss
@@ -9,7 +9,8 @@
 
 @media (max-width: 768px) {
     .text-hi {
-        font-size: 40px;
+        text-align: center;
+        font-size: 30px;
         font-family: "Montserrat", sans-serif;
     }
 }
