--- a/src/assets/style/components/_button.scss
+++ b/src/assets/style/components/_button.scss
@@ -36,3 +36,7 @@ button:focus {
   display: flex;
   justify-content: space-between; /* Distribui o espaço entre as colunas */
 }
+
+.menu-d {
+  font-size: 30px;
+}
