--- a/src/assets/style/pages/_home.scss
+++ b/src/assets/style/pages/_home.scss
@@ -81,5 +81,11 @@
 }
 
 .iconSocial {
+    text-decoration: none;
+    cursor: pointer;
     font-size: 30px;
 }
+
+.iconSocial:hover {
+    text-decoration: none;
+  }
