--- a/docs/assets/style/_app.scss
+++ b/docs/assets/style/_app.scss
@@ -4,4 +4,5 @@
 @import "./template/container";
 @import "./_colors";
 @import "./sizes";
-@import "./fonts"
+@import "./fonts";
+@import "./utills";
