--- a/src/app/components/modais/modal-contato/modal-contato.component.html
+++ b/src/app/components/modais/modal-contato/modal-contato.component.html
@@ -4,18 +4,18 @@
         
         <div class="mt-4 col-12 col-md-12">
             <div class="field">
-                <input type="text" name="nome" class="w-full" pInputText />
+                <input placeholder="Digite seu Nome" type="text" name="nome" class="w-full" pInputText />
             </div>
         </div>
         <div class="mt-4 col-12 col-md-12">
             <div class="field">
-                <input type="text" name="email" class="w-full" pInputText />
+                <input placeholder="Seu sobrenome" type="text" name="email" class="w-full" pInputText />
 
             </div>
         </div>
         <div class="mt-4 col-12 col-md-12 form-group">
             <div class="field">
-                <input type="text" name="cpf" mask="000.000.000-00" class="w-full" pInputText />
+                <input placeholder="Digite seu Telefone" type="text" name="cpf" mask="000.000.000-00" class="w-full" pInputText />
             </div>
         </div>
         <div class="mt-4 col-12">
