--- a/src/assets/style/pages/_home.scss
+++ b/src/assets/style/pages/_home.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
+@import url("https://fonts.googleapis.com/css?family=Aldrich");
 
 .text-hi {
     // margin-top: 60px;
@@ -6,6 +7,8 @@
     font-family: "Montserrat", sans-serif;
     font-size: 50px
 }
+
+
 
 @media (max-width: 768px) {
     .text-hi {
