--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="d-none d-md-block col-md-6 d-flex">
             <a class="navbar-brand mr-auto" id="reload" href="#">
-                <img src="../../../assets/logo-site-c.png" (error)="handleImageError()" alt="Rita RH"
+                <img src="./assets/logo-site-c.png" (error)="handleImageError()" alt="Rita RH"
                     class="file-img sidebar-menu-logo" />
             </a>
         </div>
