--- a/src/app/pages/modulos/about/about.component.html
+++ b/src/app/pages/modulos/about/about.component.html
@@ -5,7 +5,7 @@
             <div class="col-12 col-md-12 "><label class="text-hi-title mch-fs-30">Sobre Mim</label></div>
             <div class="row ">
                 <div class=" col-12 col-md-6 mch-color-white imgProfile">
-                    <img class="imgProfile" src="../../../../assets/IMG_4967.JPG" alt="profile">
+                    <img class="imgProfile" src="./assets/profile.jpg" alt="profile">
                 </div>
                 <div class=" col-12 col-md-6 mch-color-white">
                     <p>
