--- a/src/assets/style/utills.scss
+++ b/src/assets/style/utills.scss
@@ -192,3 +192,25 @@ h6.titulo-page {
     width: 100px;
   }
 }
+
+/* Para navegadores WebKit (Chrome, Safari, etc.) */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d4ff5b;
+  border-radius: 5px;
+  width: 3px; /* Diminua o valor da largura para tornar o thumb mais estreito */
+}
+
+/* Para navegadores Firefox */
+scrollbar {
+  width: 5px;
+}
+
+thumb {
+  background-color: #d4ff5b;
+  border-radius: 5px;
+  width: 3px; /* Diminua o valor da largura para tornar o thumb mais estreito */
+}
