--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -19,16 +19,16 @@
             <div class="row justify-content-center">
                 <div class="col-2 col-md-1">
                     <a class="mt-5 mt-md-0 iconSocial  pi pi-github" href="https://github.com/Caslumch" target="_blank"
-                        style="color: #d3d3d3;"></a>
+                        ></a>
                 </div>
                 <div class="col-2 col-md-1">
                     <a class="mt-5 mt-md-0 iconSocial  pi pi-instagram"
-                        href="https://www.instagram.com/caslumch/?hl=pt-br" target="_blank" style="color: #d3d3d3;"></a>
+                        href="https://www.instagram.com/caslumch/?hl=pt-br" target="_blank"></a>
                 </div>
                 <div class="col-2 col-md-1">
                     <a class="mt-5 mt-md-0 iconSocial  pi pi-linkedin"
                         href="https://www.linkedin.com/in/lucas-machado-16a42422b/" target="_blank"
-                        style="color: #d3d3d3;"></a>
+                        ></a>
                 </div>
             </div>
         </div>
