--- a/src/app/pages/modulos/about/about.component.html
+++ b/src/app/pages/modulos/about/about.component.html
@@ -2,12 +2,12 @@
 <div class="container-found">
     <div class="containerCsite">
         <div class="col-12">
-            <div class="col-12 col-md-12 "><label class="text-hi-title mch-fs-30">Sobre Mim</label></div>
+            <div class="col-12 col-md-12 "><label class="text-hi-title">Sobre Mim</label></div>
             <div class="row ">
                 <div class=" col-12 col-md-6 mch-color-white imgProfile">
                     <img class="imgProfile" src="./assets/profile.jpg" alt="profile">
                 </div>
-                <div class=" col-12 col-md-6 mch-color-white">
+                <div class=" mt-4 mt-md-0 col-12 col-md-6 mch-color-white">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
