--- a/src/app/pages/modulos/contact/contact.component.html
+++ b/src/app/pages/modulos/contact/contact.component.html
@@ -3,6 +3,7 @@
     <div class="containerCsite">
 <div class="row d-flex justify-content-center">
     <div class="col-12 col-md-12 text-center ">
+        <p class="mt-4 text-hi-title mch-fs-50" >Contato.</p>
         <img class="imgConfig" src="./assets/config.png" alt="man" />
         <p class="mt-4" >Em manutenção.</p>
     </div>
