--- a/src/app/pages/modulos/home/home.component.html
+++ b/src/app/pages/modulos/home/home.component.html
@@ -16,7 +16,7 @@
                     <p-button label="Me Acompanhe nas Redes"></p-button>
                 </div>
                 <div class="mt-4 mt-md-0 col-md-0 col-md-2 col-12">
-                    <p-button label="Projetos" styleClass="p-button-outlined"></p-button>
+                    <p-button [routerLink]="'/projetos'" label="Projetos" styleClass="p-button-outlined"></p-button>
                 </div>
             </div>
 
