--- a/src/assets/style/components/_button.scss
+++ b/src/assets/style/components/_button.scss
@@ -20,10 +20,10 @@ button:focus {
   }
 
   &:not(.exit, .p-button-icon-only, .p-fileupload-choose) {
-    width: 100%; /* ou ajuste o valor conforme necessário */
+    width: 100%; 
     height: 50px;
-    /* left: 17px; */ /* Remova ou ajuste conforme necessário */
-    /* top: -28px; */ /* Remova ou ajuste conforme necessário */
+    
+   
     text-align: center;
 }
 }
@@ -34,7 +34,7 @@ button:focus {
 
 .flex-container {
   display: flex;
-  justify-content: space-between; /* Distribui o espaço entre as colunas */
+  justify-content: space-between; 
 }
 
 .menu-d {
