--- a/src/assets/style/components/header.scss
+++ b/src/assets/style/components/header.scss
@@ -10,22 +10,17 @@
     height: auto;
 }
 
-/* CSS personalizado para o seu cabeçalho */
 .navbar-custom {
     background-color: #0c0c0c;
 }
 
-/* Defina a cor do texto do cabeçalho, se necessário */
 .navbar-custom .navbar-brand,
 .navbar-custom .navbar-nav .nav-link {
     color: #FFFFFF;
-    /* Cor do texto (branco neste exemplo) */
 }
 
-/* Altere a cor do ícone do botão de alternância, se desejar */
 .navbar-custom .navbar-toggler-icon {
     background-color: #FFFFFF;
-    /* Cor de fundo do ícone do botão de alternância (branco neste exemplo) */
 }
 
 
@@ -38,44 +33,33 @@
     color: white;
     font-size: 16px;
     min-width: 100px;
-    /* Defina a largura mínima desejada */
     display: inline-block;
-    /* Alterado de flex para inline-block */
     margin-right: 5px;
-    /* Adiciona margem à direita para separar os elementos */
     height: 100%;
     padding: 0 5px;
     cursor: pointer;
 }
 
-/* Personalize o botão de expansão */
 .navbar-toggler {
     background-color: transparent;
-    /* Cor de fundo do botão */
     border: none;
-    /* Remova a borda do botão */
     outline: none;
-    /* Remova a borda de foco */
     cursor: pointer;
 }
 
 /* Personalize o ícone do botão de expansão */
 .navbar-toggler-icon {
     background-color: #fff;
-    /* Cor de fundo do ícone */
 }
 
 @media (max-width: 767px) {
     .navbar-header {
         overflow-x: auto;
-        /* Adiciona uma barra de rolagem horizontal quando necessário */
         white-space: nowrap;
-        /* Impede a quebra de linha dos itens do menu */
     }
 
     .opt-navbar {
         display: inline-block;
-        /* Exibe os itens do menu em uma linha horizontal */
     }
 }
 
@@ -100,25 +84,15 @@
     width: 120px;
     height: 40px;
     background-color: #D4FF5B;
-    /* Cor de fundo do botão */
     color: #000000;
-    /* Cor do texto no botão */
     padding: 10px 20px;
-    /* Espaçamento interno do botão */
     border-radius: 30px;
-    /* Raio das bordas arredondadas */
     text-align: center;
-    /* Centraliza o texto no botão */
     text-decoration: none;
-    /* Remove sublinhado de links (caso seja um link) */
     display: inline-block;
-    /* Permite que o botão tenha largura e altura de acordo com o conteúdo */
     font-size: 16px;
-    /* Tamanho da fonte do texto no botão */
     cursor: pointer;
-    /* Transforma o cursor em uma mãozinha ao passar o mouse sobre o botão */
     border: none;
-    /* Remove a borda do botão */
 }
 
 .file-img {
@@ -129,6 +103,7 @@
 }
 
 .linkSelect {
+    transition: none;
     border-bottom: 3px solid #D4FF5B;
 }
 
@@ -141,10 +116,10 @@
 .optMenu {
     text-decoration: none;
     color: white;
-    transition: 0.3s;
+    // transition: 0.3s;
 }
 
 .optMenu:hover {
     text-decoration: none;
-    color: #858585;
+    color: #b6b6b6;
 }
