--- a/src/assets/style/template/_container.scss
+++ b/src/assets/style/template/_container.scss
@@ -3,7 +3,7 @@
     justify-content: space-between;
     background-color: #0C0C0C;
     flex-direction: column;
-    min-height: 100vh; /* O contêiner ocupará pelo menos 100% da altura da janela do navegador */
+    min-height: 100vh; 
     transition: margin-left 0.2s;
     padding-top: 10px;
 }
@@ -12,6 +12,5 @@
 @media screen and (max-width: 768px) {
     .container-found {
         padding-top: 20px;
-        /* Aumentar o espaço superior para o cabeçalho em telas menores */
     }
 }
