--- a/src/app/pages/modulos/home/home.component.html
+++ b/src/app/pages/modulos/home/home.component.html
@@ -6,6 +6,8 @@
                 <div class=" col-12 col-md-8 mch-color-white text-hi">
                     <label><span [style]="simbolStyle">{{ simbol }}</span> Hi, I’m Lucas Machado - Front-end
                         developer.</label>
+                    <!-- <label><span [style]="simbolStyle">{{ simbol }}</span> Hi, I’m Lucas Machado - Front-end
+                        developer.</label> -->
                     <p class="mch-fs-15 mch-color-grey2">Dando vida à web com código e design.</p>
                 </div>
 
