--- a/src/app/pages/modulos/home/home.component.html
+++ b/src/app/pages/modulos/home/home.component.html
@@ -8,7 +8,7 @@
                         developer.</label>
                     <!-- <label><span [style]="simbolStyle">{{ simbol }}</span> Hi, I’m Lucas Machado - Front-end
                         developer.</label> -->
-                    <p class="mch-fs-15 mch-color-grey2">Dando vida à web com código e design.</p>
+                    <p class="mch-fs-17 mch-color-grey2">Dando vida à web com código e design.</p>
                 </div>
 
             </div>
@@ -23,7 +23,13 @@
             </div>
 
             <div class="mt-4 row">
-                <div class="mt-4 col-12 col-md-8">
+                <div class="panelElement mt-4 col-12 col-md-6">
+                        <img class="imgStacks" src="../../../../assets/projects.jpg" alt="about">
+                </div>
+                <div class="panelElement mt-4 col-12 col-md-6">
+                        <img class="imgStacks" src="../../../../assets/projects.jpg" alt="about">
+                </div>
+                <!-- <div class=" mt-4 col-12 col-md-6">
                     <p-panel>
                         <p>
                             Pedro Machado da Silva
@@ -34,11 +40,9 @@
                             laboris nisi ut aliquip ex ea commodo
                         </p>
                     </p-panel>
-                </div>
+                </div> -->
             </div>
         </div>
-
         <app-footer></app-footer>
-
     </div>
 </div>
