--- a/src/app/pages/modulos/home/home.component.html
+++ b/src/app/pages/modulos/home/home.component.html
@@ -15,21 +15,32 @@
             <div class="row">
 
                 <div class="col-md-4 col-12 ">
-                    <p-button label="Me Acompanhe nas Redes"></p-button>
+                    <p-button icon="pi pi-send" label="Me Acompanhe nas Redes" iconPos="right" ></p-button>
                 </div>
                 <div class="mt-4 mt-md-0 col-md-0 col-md-2 col-12">
-                    <p-button [routerLink]="'/projetos'" label="Projetos" styleClass="p-button-outlined"></p-button>
+                    <p-button [routerLink]="'/projects'" label="Projetos" styleClass="p-button-outlined"></p-button>
                 </div>
             </div>
 
             <div class="mt-4 row">
-                <div class="panelElement mt-4 col-12 col-md-6">
-                        <img class="imgStacks" src="../../../../assets/projects.jpg" alt="about">
+                <!-- <div [routerLink]="['/projects']" class="panelElement mt-4 col-12 col-md-6">
+                    <div class="image-container">
+                        <img class="imgStacks" src="./assets/projects.jpg" alt="about">
+                        <div class="overlay">
+                            <label class="label">Projetos</label>
+                        </div>
+                    </div>
                 </div>
                 <div class="panelElement mt-4 col-12 col-md-6">
-                        <img class="imgStacks" src="../../../../assets/projects.jpg" alt="about">
-                </div>
-                <!-- <div class=" mt-4 col-12 col-md-6">
+                    <div class="image-container">
+                        <img class="imgStacks" src="./assets/fotoMinha.jpg" alt="about">
+                        <div class="overlay">
+                            <label class="label">Fotografia</label>
+                        </div>
+                    </div>
+                </div> -->
+
+                <div class="panelElement mt-4 col-12 col-md-6">
                     <p-panel>
                         <p>
                             Pedro Machado da Silva
@@ -40,7 +51,10 @@
                             laboris nisi ut aliquip ex ea commodo
                         </p>
                     </p-panel>
-                </div> -->
+                </div> 
+                
+                
+
             </div>
         </div>
         <app-footer></app-footer>
