--- a/src/assets/style/pages/_home.scss
+++ b/src/assets/style/pages/_home.scss
@@ -123,13 +123,51 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 0, 0, 0.5); /* Cor vermelha (ajuste conforme necessário) */
-    opacity: 0; /* Inicialmente, tornamos a camada de cor transparente */
+    background-color: rgba(255, 0, 0, 0.5);
+    /* Cor vermelha (ajuste conforme necessário) */
+    opacity: 0;
+    /* Inicialmente, tornamos a camada de cor transparente */
     border-radius: inherit;
-    transition: opacity 0.3s; /* Adicionamos uma transição de opacidade para suavizar a mudança */
+    transition: opacity 0.3s;
+    /* Adicionamos uma transição de opacidade para suavizar a mudança */
     z-index: 1;
 }
 
 .imgStacks:hover::before {
-    opacity: 1; /* Quando o mouse passar sobre a imagem, tornamos a camada de cor visível */
+    opacity: 1;
+    /* Quando o mouse passar sobre a imagem, tornamos a camada de cor visível */
+}
+
+.image-container {
+    position: relative;
+    overflow: hidden;
+}
+
+/* Filtro preto e branco ao passar o mouse */
+.image-container:hover .imgStacks {
+    filter: grayscale(100%);
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(128, 128, 128, 0.279);
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+}
+
+.label {
+    font-family: "Aldrich", sans-serif;
+    color: white;
+    /* Cor do texto da label */
+    font-size: 18px;
+    text-align: center;
+    padding: 10px 20px;
+    cursor: pointer;
 }
