--- a/src/app/pages/modulos/home/home.component.html
+++ b/src/app/pages/modulos/home/home.component.html
@@ -3,22 +3,22 @@
     <div class="containerCsite">
         <div class="col-12">
             <div class="row ">
-                <div class=" col-12 col-md-8 mch-color-white text-hi">
-                    <label><span [style]="simbolStyle">{{ simbol }}</span> Hi, I’m Lucas Machado - Front-end
-                        developer.</label>
-                    <!-- <label><span [style]="simbolStyle">{{ simbol }}</span> Hi, I’m Lucas Machado - Front-end
-                        developer.</label> -->
-                    <p class="mch-fs-17 mch-color-grey2">Dando vida à web com código e design.</p>
+                <div class="col-12 col-md-8 mch-color-white text-hi">
+                    <label><span [style]="simbolStyle">{{ simbol }}</span> Hi, I’m Lucas Machado - Front-end developer.</label>
+                    <p class="mch-fs-17 mch-color-grey2">
+                        <span class="pulse"></span> Dando vida à web com código e design.
+                    </p>
                 </div>
+                
 
             </div>
             <div class="row">
 
                 <div class="col-md-4 col-12 ">
-                    <p-button icon="pi pi-send" label="Me Acompanhe nas Redes" iconPos="right" ></p-button>
+                    <p-button icon="pi pi-send" label="Me Acompanhe nas Redes" iconPos="right"></p-button>
                 </div>
                 <div class="mt-4 mt-md-0 col-md-0 col-md-2 col-12">
-                    <p-button [routerLink]="'/projects'" label="Projetos" styleClass="p-button-outlined"></p-button>
+                    <p-button [routerLink]="'/projects'" label="Fotografia" styleClass="p-button-outlined"></p-button>
                 </div>
             </div>
 
@@ -51,9 +51,9 @@
                             laboris nisi ut aliquip ex ea commodo
                         </p>
                     </p-panel>
-                </div> 
-                
-                
+                </div>
+
+
 
             </div>
         </div>
