--- a/src/assets/style/utills.scss
+++ b/src/assets/style/utills.scss
@@ -180,7 +180,7 @@ h6.titulo-page {
 }
 
 .bline {
-  white-space: pre-line; 
+  white-space: pre-line;
 }
 
 .imgConfig {
@@ -224,3 +224,29 @@ thumb {
 
   font-family: "Aldrich", sans-serif;
 }
+.pulse {
+  max-width: 100%;
+  max-height: 100%;
+  width: 10px;
+  height: 10px;
+  background-color: rgb(119, 118, 118);
+  border-radius: 50%;
+  display: inline-block; /* Altere para inline-block */
+  margin-right: 5px; /* Adicione um espaçamento à direita, se desejado */
+  animation: pulse 1.5s linear infinite;
+  position: relative;
+  // top: -2px;
+}
+
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgb(138, 138, 138);
+  }
+  100% {
+    box-shadow: 0 0 0 5px rgb(168, 35, 35, 0);
+  }
+}
+
+
+
