--- a/src/app/pages/modulos/home/home.component.html
+++ b/src/app/pages/modulos/home/home.component.html
@@ -52,9 +52,13 @@
                         </p>
                     </p-panel>
                 </div>
-
-
-
+                <div class="panelElement mt-4 col-12 col-md-6">
+                    <p-panel>
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </p-panel>
+                </div>
             </div>
         </div>
         <app-footer></app-footer>
